--- a/BookShelf/Components/Layout/NavMenu.razor
+++ b/BookShelf/Components/Layout/NavMenu.razor
@@ -11,32 +11,32 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <img src="home.svg"  class="nav-menu-icon" /> Home
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="index">
-                <span class="bi-book nav-menu-icon" aria-hidden="true"></span> Random Book
+                <img src="book.svg"  class="nav-menu-icon" /> Random Book
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="categories">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Books
+                <img src="books.svg" alt="Books" class="nav-menu-icon" /> Books
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="addbook">
-                <span class="bi bi-plus nav-menu-icon" aria-hidden="true"></span> Add Book
+                <img src="book-upload.svg"  class="nav-menu-icon" /> Add Book
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="assistant">
-                <span class="bi bi-person nav-menu-icon" aria-hidden="true"></span> Virtual Assistant
+                <img src="message-chatbot.svg"  class="nav-menu-icon" /> Virtual Assistant
             </NavLink>
         </div>
     </nav>
 </div>
-
